--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,6 +6,6 @@ plugins {
 dependencies {
     api project(":api")
     implementation project(":persistence")
-
     implementation libs.spring.boot.starter.data.jpa
+    implementation libs.spring.boot.starter.mail
 }
