--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -4,6 +4,16 @@ logging:
     org.springframework.jdbc.core: TRACE
 
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${SMTP_USERNAME}
+    password: ${SMTP_PASSWORD}
+    properties:
+        mail:
+          smtp:
+            auth: true
+            starttls.enable: true
   mvc:
     format:
       date: iso
